--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
         <title>Onboarding Test</title>
     </head>
     <body>
+        <h1>Sample Graph</h1>
         <div class="flex-center">
             <!-- d3 output box -->
-            <div id="my_dataviz" data-hint="This is a Density Graph" data-hint-position="middle-middle"></div>
+            <div
+                id="my_dataviz"
+                data-intro="Click points on the graph to learn more about the graph"
+                data-title=""
+                data-position="left"
+                showProgress="0"
+            ></div>
         </div>
     </body>
 
